--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -5,8 +5,8 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-    
+    #runs-on: ubuntu-latest
+    runs-on: [linux, arm32]
     steps:
     - uses: actions/checkout@v1
       #- name: configure
