--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -2,12 +2,15 @@ name: C/C++ CI
 
 on: [push]
 
+strategy:
+matrix:
+  compiler: [gcc, clang]
+
 jobs:
   build:
-
-    #runs-on: ubuntu-latest
-    runs-on: [linux, ARM32]
+    runs-on: ubuntu-latest
     steps:
+  
     - uses: actions/checkout@v1
       #- name: configure
       #run: ./configure
